--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="about">
 <meta property="og:url" content="http://www.qinyadan.com/about/index.html">
-<meta property="og:site_name" content="birck's life">
+<meta property="og:site_name" content="birck's life,为了生活而程序">
 <meta property="og:description" content="基本说明* 在自己有时间的时候记录下或者收集其他优秀前辈的智慧结晶。
 1. 记录生活的点滴
 2. 记录java学习的历程
@@ -157,7 +157,7 @@
   
 
   
-    about | birck's life
+    about | birck's life,为了生活而程序
   
 </title>
 </head>
@@ -200,7 +200,7 @@
   <div class="custom-logo-site-title">
     <a href="/"  class="brand" rel="start">
       <span class="logo-line-before"><i></i></span>
-      <span class="site-title">birck's life</span>
+      <span class="site-title">birck's life,为了生活而程序</span>
       <span class="logo-line-after"><i></i></span>
     </a>
   </div>
@@ -388,7 +388,7 @@
         <nav class="site-state motion-element">
           <div class="site-state-item site-state-posts">
             <a href="/archives">
-              <span class="site-state-item-count">9</span>
+              <span class="site-state-item-count">10</span>
               <span class="site-state-item-name">日志</span>
             </a>
           </div>
@@ -396,7 +396,7 @@
           
             <div class="site-state-item site-state-categories">
               <a href="/categories">
-                <span class="site-state-item-count">3</span>
+                <span class="site-state-item-count">4</span>
                 <span class="site-state-item-name">分类</span>
               </a>
             </div>
@@ -405,7 +405,7 @@
           
             <div class="site-state-item site-state-tags">
               <a href="/tags">
-                <span class="site-state-item-count">4</span>
+                <span class="site-state-item-count">5</span>
                 <span class="site-state-item-name">标签</span>
               </a>
             </div>
